# FastParticleToolkit

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.rst  LICENSE.md  README.md  REFERENCE.md  bootstrap.sh
bootstrap/: CMakeLists.txt  example_main.cpp
docs/: CMakeLists.txt  allocator.rst  atoms.rst  cells.rst  index.rst  main.rst  pairs.rst  singles.rst
include/fpt/: Alloc.hpp  Cell.hpp  Display.hpp  Pairs.hpp  Singles.hpp  Sort.hpp  Timer.hpp
tests/: CMakeLists.txt  KernelExecutionFixture.hpp  TestAccs.hpp  TestAlpaka.hpp  test.cpp  testAlloc.cpp
